--- a/mint/embed.html
+++ b/mint/embed.html
@@ -1,6 +1,6 @@
 <script>
-    CONTRACT_ADDRESS = "YOUR CONTRACT ADDRESS HERE"
-    NETWORK_ID = 1
+    CONTRACT_ADDRESS = "0x0b9b71701a589b7c91bdfdd54616636758cf179b"
+    NETWORK_ID = 5
 </script>
 <script src="https://nftcomponents.vercel.app/static/js/main.js"></script>
 <link href="https://nftcomponents.vercel.app/static/css/main.css" rel="stylesheet">
